# weather-chat-langgraph

./: .env.example  .gitignore  README.md  TODO.md  docker-compose.yml  task.md
backend/: Dockerfile  pyproject.toml
backend/app/: agent.py  main.py  weather.py
deploy/: .deploy.env.example  deploy.sh  docker-compose.prod.yml  setup-server.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  WeatherCard.tsx  index.css  sse.ts  types.ts
