[project]
name = "weather-agent-backend"
version = "0.1.0"
description = "LangGraph weather agent with SSE streaming"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "langgraph==0.2.50",
    "langchain==0.3.7",
    "langchain-openai==0.2.8",
    "langchain-core==0.3.21",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "sse-starlette==2.1.3",
    "langgraph-checkpoint-sqlite==2.0.1",
    "aiosqlite==0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
